tests/fixtures/invalid/pow_none_none_float.py
# Cannot call pow() with None, None, Float
x = pow(None, None, 1.0)
